--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -139,7 +139,11 @@ unbindall
 		
 //	GRANADE CROSSHAIR
 
-	bind		"c"			"toggle cl_crosshairsize 0.5 1000"
+		bind	"c"			"toggle cl_crosshairsize 0.5 1000"
+		
+//	MUTE BIND
+		
+		bind	"x"			"voice_modenable_toggle"
 		
 //	END
 
