--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -106,9 +106,9 @@ unbindall
 
 //	BUY BIND
 
-		bind	"kp_4"			"buy m4a1_silencer;	buy ak47;"
+		bind	"kp_4"			"buy m4a1;		buy m4a1_silencer;	buy ak47;"
 		bind	"kp_5"			"buy awp;"
-		bind	"kp_6"			"buy famas;	buy galilar;"
+		bind	"kp_6"			"buy famas;		buy galilar;"
 		bind	"kp_8"			"buy smokegrenade;	buy flashbang;"
 		bind	"kp_9"			"buy hegrenade;"
 		bind	"kp_7"			"buy incgrenade;	buy molotov;"
