--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -9,17 +9,17 @@ unbindall
 //	CROSSHAIR 
  
 		cl_crosshairstyle		"4"
-		cl_crosshairsize		"0.5"
-		cl_crosshairthickness		"2"
-		cl_crosshairgap			"-4"
-		cl_crosshair_drawoutline	"0"
+		cl_crosshairsize		"2"
+		cl_crosshairthickness		"0"
+		cl_crosshairgap			"-3"
+		cl_crosshair_drawoutline	"1"
 		cl_crosshairdot 		"0"
 		cl_crosshair_t 			"0"
-		cl_crosshairusealpha 		"12
-		cl_crosshairalpha 		"255"
+		cl_crosshairusealpha 		"12"
+		cl_crosshairalpha 		"192"
 		cl_crosshair_recoil 		"0"
 		cl_crosshairgap_useweaponvalue	"0"
-		cl_crosshaircolor		"5"
+		cl_crosshaircolor		"4"
  
 //	EXTRAS
 		cl_crosshair_sniper_width	"2"
@@ -127,18 +127,23 @@ unbindall
 
 //	RADAR
 
-		cl_radar_always_centered	"true"
-		cl_radar_icon_scale_min		"0.6"
-		cl_radar_rotate			"true"
+		cl_radar_always_centered		"0"
+		cl_radar_icon_scale_min			"1.30"
+		cl_radar_rotate					"1"
+		cl_radar_scale					"0.40"
 
 //	HUD
 		
 		cl_hud_color			"1"
-		cl_hud_radar_scale		"1.2"
+		cl_hud_radar_scale		"1.069768"
+		hud_scaling				"1"
+		safezonex 				"1"
+		safezoney				"1"
+		r_fullscreen_gamma		"2.552513"
 		
 //	GRANADE CROSSHAIR
 
-		bind	"c"			"toggle cl_crosshairsize 0.5 1000"
+		bind	"c"			"toggle cl_crosshairsize 2 1000"
 		
 //	MUTE BIND
 		
