--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -78,13 +78,13 @@ unbindall
 
 //	VIDEO
 
-		fps_max		"75"
-		fps_max_ui	"75"
+		fps_max				"75"
+		fps_max_ui			"75"
 		r_drawtracers_firstperson	"1"
 		
 //	VOLUME
 
-		volume		"0.4"
+		volume				"0.4"
 		
 //	JUMPTHROW
 
@@ -127,23 +127,23 @@ unbindall
 
 //	RADAR
 
-		cl_radar_always_centered		"0"
-		cl_radar_icon_scale_min			"1.30"
-		cl_radar_rotate					"1"
-		cl_radar_scale					"0.40"
+		cl_radar_always_centered	"0"
+		cl_radar_icon_scale_min		"1.30"
+		cl_radar_rotate			"1"
+		cl_radar_scale			"0.40"
 
 //	HUD
 		
 		cl_hud_color			"1"
 		cl_hud_radar_scale		"1.069768"
-		hud_scaling				"1"
-		safezonex 				"1"
-		safezoney				"1"
+		hud_scaling			"1"
+		safezonex 			"1"
+		safezoney			"1"
 		r_fullscreen_gamma		"2.552513"
-		
-//	GRANADE CROSSHAIR
 
-		bind	"c"			"toggle cl_crosshairsize 2 1000"
+// LEFT HAND
+
+		Bind	"c"			"switchhands"
 		
 //	MUTE BIND
 		
