--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -84,10 +84,15 @@
 		
 	//	JUMPTHROW
 
-			alias 				"+jumpaction" "+jump;"
-			alias 				"+throwaction" "-attack; -attack2"
-			alias 				"-jumpaction" "-jump"
-			bind	"c"			"+jumpaction;+throwaction;"
+			alias 	+muteh			"unbind h"
+			alias	-muteh			"bind	c"
+			
+			alias	revert			"bind mouse_x yaw"
+			alias	combo			"-jump;revert;-muteh"
+			alias	+JUMPTHROW		"+jump"
+			alias	-JUMPTHROW		"-attack;+muteh;bind MOUSE_X combo"
+			
+			bind	"c"			"+JUMPTHROW"
 			
 	
 	//	DROP C4
